fixed header on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -160,6 +160,9 @@ button:hover{
     button {
         width: 40%;
     }
+    .header {
+        padding: 10px;
+    }
 }
 
 
